# inception

./: .gitignore  CMakeLists.txt  README  README.md  inception_build.sh
client/: CMakeLists.txt  mysql.cc  mysqlbinlog.cc
cmake/: mysql_version.cmake  ssl.cmake
cmake/build_configurations/: compiler_options.cmake
dbug/: dbug.c
document/: README.md  mkdocs.yml
document/docs/: backup.md  chapter1.md  chapter2.md  command.md  extras.md  format.md  inception.md  inception_gate_dba.md  inception_gate_rd.md  index.md  install.md  option.md  osc.md  progress.md  (+9 more)
include/: CMakeLists.txt  m_string.h  my_compiler.h  my_dbug.h  my_stacktrace.h  my_time.h  mysql.h.pp  mysql_com.h  mysqld_ername.h  mysqld_error.h  mysys_err.h  prealloced_array.h  sql_state.h
libmysql/: CMakeLists.txt  libmysql.c
libmysqld/: CMakeLists.txt
mysys/: CMakeLists.txt  charset.c  checksum.c  my_compress.c  my_error.c
mysys_ssl/: CMakeLists.txt
sql/: CMakeLists.txt  binlog.cc  derror.cc  derror.h  event_data_objects.cc  event_db_repository.cc  events.cc  field.cc  field.h  field_conv.cc  filesort.cc  gen_lex_hash.cc  handler.cc  hostname.cc  item.cc  item.h  item_buff.cc  item_cmpfunc.cc  item_cmpfunc.h  item_create.cc  item_func.cc  item_func.h  item_strfunc.cc  item_strfunc.h  item_subselect.cc  item_subselect.h  item_sum.cc  json_binary.cc  json_binary.h  json_dom.cc  json_dom.h  json_path.cc  lex.h  lex_symbol.h  lock.cc  log.cc  log_event.cc  log_event.h  log_event_old.cc  main_collector.cc  (+108 more)
sql-common/: client.c  client_plugin.c
vio/: vio.c  viosocket.c
zlib/: CMakeLists.txt
(+1 files in other folders)
